<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:padding="20dp">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:title="@string/cinema_settings"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_back"/>
        <EditText android:id="@+id/editCinemaName" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/cinema_name"/>
        <EditText android:id="@+id/editCinemaAddress" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/cinema_address"/>
        <EditText android:id="@+id/editCinemaLatitude" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/cinema_latitude" android:inputType="numberDecimal|numberSigned"/>
        <EditText android:id="@+id/editCinemaLongitude" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/cinema_longitude" android:inputType="numberDecimal|numberSigned"/>
        <Button android:id="@+id/btnSaveCinema" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/save"/>
    </LinearLayout>
</ScrollView>
